# LP1-Jogo-Snake

./: CMakeLists.txt  README.md
data/: maze1.txt  maze2.txt  maze3.txt  maze4.txt  maze5.txt  maze6.txt  maze7.txt
include/: Level.h  Player.h  Snake.h  SnakeGame.h
src/: Level.cpp  Player.cpp  Snake.cpp  SnakeGame.cpp  Snaze.cpp
